<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_lable_orange">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp">
        <TextView
            android:id="@+id/order_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id_text" />
        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name_text"
            android:paddingLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/order_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_username_text" />
        <TextView
            android:id="@+id/order_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/order_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name_text" />
        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name_text"
            android:paddingLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/order_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status_text" />
        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.0000"
            android:paddingLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/order_lineNumber_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_lineNumber_text" />
        <TextView
            android:id="@+id/order_lineNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.0000"
            android:paddingLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/order_building_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_building_text" />
        <TextView
            android:id="@+id/order_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.0000"
            android:paddingLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/order_create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_create_text" />
        <TextView
            android:id="@+id/order_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.0000"
            android:paddingLeft="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:paddingRight="5dp">
        <TextView
            android:id="@+id/order_config_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_config_text" />
        <TextView
            android:id="@+id/order_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.0000"
            android:paddingLeft="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_below="@+id/effect_group"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_button_shape"
        android:onClick="onLinearClick"
        android:text="提交"
        android:textColor="@color/white"
        android:textSize="14sp" />



</LinearLayout>