<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titleview_layout"/>
    <LinearLayout
        android:id="@+id/lay_new_device"
        android:layout_below="@+id/lay_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/new_device"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <TextView
            android:id="@+id/new_device_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:singleLine="true" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_update_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_new_device"
        android:orientation="horizontal"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/home_name"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <TextView
            android:id="@+id/update_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/update_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:singleLine="true"
            android:textSize="14sp"
            android:padding="2dp"
            android:visibility="gone"
            android:background="@drawable/edit_text_bg"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_update_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_update_name"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/home_phone"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <TextView
            android:id="@+id/update_phone_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/update_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:singleLine="true"
            android:maxLength="11"
            android:inputType="phone"
            android:textSize="14sp"
            android:padding="2dp"
            android:visibility="gone"
            android:background="@drawable/edit_text_bg"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_old_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_update_phone"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/old_device"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <EditText
            android:id="@+id/old_device"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:singleLine="true"
            android:textSize="14sp"
            android:padding="2dp"
            android:background="@drawable/edit_text_bg"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/get_info"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/lay_old_device"
        android:text="获取信息"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_button_shape"
        android:onClick="onLinearClick" />

    <RelativeLayout
        android:id="@+id/lay_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_info"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:visibility="gone" >
        <TextView
            android:id="@+id/config_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_lable_orange"
            android:textSize="12sp"
            android:padding="5dp" />
        <TextView
            android:id="@+id/update_effect_text"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/config_info"
            android:text="@string/config_type"
            android:textSize="14sp"
            android:paddingTop="5dp"/>
        <RadioGroup
            android:id="@+id/update_effect_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_effect_text"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/effect_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/config_now"
                android:textColor="@color/grey"/>
            <RadioButton
                android:id="@+id/effect_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/config_next"
                android:textColor="@color/grey"/>
        </RadioGroup>
    </RelativeLayout>
    <Button
        android:id="@+id/refresh_apmac_btn"
        android:layout_below="@+id/lay_info"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/login_button_shape"
        android:text="刷新设备"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:onClick="onLinearClick"/>

    <Button
        android:id="@+id/test_speed_btn"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_below="@+id/lay_info"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/login_button_shape"
        android:onClick="onLinearClick"
        android:text="测速"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <personal.buildbroad.utils.XCRoundImageView
        android:id="@+id/speed_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/lay_info"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:src="@mipmap/ic_speed" />

    <Button
        android:id="@+id/commit_btn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/test_speed_btn"
        android:text="更新配置"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_button_shape"
        android:onClick="onLinearClick"
        android:visibility="gone"/>
</RelativeLayout>