<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titleview_layout"/>

    <!--    <LinearLayout
            android:id="@+id/lay_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/lay_bg">-->
    <LinearLayout
        android:id="@+id/lay_apmac"
        android:layout_below="@+id/lay_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="设备地址"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <TextView
            android:id="@+id/apmac_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:singleLine="true" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/socket_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="跳转"
            android:visibility="gone"
            android:onClick="onLinearClick"
            android:textSize="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_area"
        android:layout_below="@+id/lay_apmac"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="区域名称"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <Spinner
            android:id="@+id/areas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_item"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/lay_area"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/item_name"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <Spinner
            android:id="@+id/items"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_configs"

        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/lay_item"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/config_info"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <Spinner
            android:id="@+id/configs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_apgroup"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/lay_configs"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/apgroup_info"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <Spinner
            android:id="@+id/apgroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_apgroup"
        android:orientation="horizontal"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/home_name"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/h_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:singleLine="true"
            android:textSize="14sp"
            android:padding="2dp"
            android:visibility="gone"
            android:background="@drawable/edit_text_bg"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_name"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/home_phone"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <TextView
            android:id="@+id/phone_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/h_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:singleLine="true"
            android:maxLength="11"
            android:inputType="phone"
            android:textSize="14sp"
            android:padding="2dp"
            android:visibility="gone"
            android:background="@drawable/edit_text_bg"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_village"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_phone"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/home_village"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <TextView
            android:id="@+id/village_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/h_village"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:singleLine="true"
            android:textSize="14sp"
            android:padding="2dp"
            android:visibility="gone"
            android:background="@drawable/edit_text_bg"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/lay_village_hint"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/lay_village"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingLeft="30dp"
        android:text="(请输入小区地址,如XX省XX市XX区XX小区)"
        android:textColor="@color/red"
        android:singleLine="true"/>
    <LinearLayout
        android:id="@+id/lay_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_village_hint"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/home_address"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingLeft="30dp" />
        <EditText
            android:id="@+id/h_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:singleLine="true"
            android:textSize="14sp"
            android:padding="2dp"
            android:background="@drawable/edit_text_bg"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <TextView
        android:id="@+id/lay_address_hint"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/lay_address"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingLeft="30dp"
        android:text="(请输入详细地址,如XX楼XX单元XX号)"
        android:textColor="@color/red"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/effect_text"
        android:layout_below="@id/lay_address_hint"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/config_type"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingLeft="30dp"/>
    <RadioGroup
        android:id="@+id/effect_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/effect_text"
        android:orientation="horizontal"
        android:paddingLeft="30dp">
        <RadioButton
            android:id="@+id/now_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/config_now"
            android:textColor="@color/grey"/>
        <RadioButton
            android:id="@+id/next_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/config_next"
            android:textColor="@color/grey"/>
    </RadioGroup>
    <Button
        android:id="@+id/refresh_apmac_btn"
        android:layout_below="@+id/effect_group"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/login_button_shape"
        android:text="刷新设备"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:onClick="onLinearClick"/>
    <Button
        android:id="@+id/commit_btn"
        android:layout_below="@+id/effect_group"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/login_button_shape"
        android:text="提交"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:onClick="onLinearClick"/>
    <Button
        android:id="@+id/test_speed_btn"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_below="@+id/effect_group"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_button_shape"
        android:onClick="onLinearClick"
        android:text="测速"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <personal.buildbroad.utils.XCRoundImageView
        android:id="@+id/speed_img"
        android:layout_below="@+id/refresh_apmac_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_speed"
        android:visibility="gone"
        android:layout_centerHorizontal="true"/>
    <!--    <Button
            android:id="@+id/exit_login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/exit_button_shape"
            android:text="安全退出登录"
            android:textColor="@color/text_grey"
            android:textSize="14sp" />-->
<!--    <Button
        android:id="@+id/exit_login_btn"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_button_underline_gray"
        android:onClick="onLinearClick"
        android:text="退出登录"
        android:textColor="@color/grey" />-->
</RelativeLayout>
